parslers-benchmark/src/tests/invalid/syntaxErr/if/ifNoelse.wacc
# if missing else clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  then
    skip
  fi
end
